# pr-manager

./: .dockerignore  Dockerfile  LICENSE  README.md  dev-container  pr_manager.py  pyproject.toml
container/: entrypoint.sh  gh-wrapper.sh
docs/superpowers/plans/: 2026-04-17-explicit-pr-fix-command.md
docs/superpowers/specs/: 2026-04-17-explicit-pr-fix-command-design.md
pr_manager/: __init__.py  agent.py  assistant.py  assistant_api.py  claude_auth.py  constants.py  container.py  display.py  fix.py  git.py  headless.py  poll.py  processor.py  state.py  tui.py
tests/: test_branch_adoption.py  test_cleanup_safety.py  test_container_startup.py  test_create_branch_clone.py  test_disable_pr.py  test_hide_pr.py  test_new_branch_screen.py  test_poll_nudge.py  test_poll_status.py  test_user_session_guard.py
