[project]
name = "pr-manager"
version = "0.1.0"
description = "Terminal UI for managing GitHub PRs with Claude Code agents"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "textual>=0.80.0",
]

[project.scripts]
pr-manager = "pr_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pr_manager"]
